--- a/src/main/resources/localization/economy.json
+++ b/src/main/resources/localization/economy.json
@@ -18,7 +18,8 @@
     "You decided to buy a lottery ticket. You won {amount}.",
     "You made a viral video on the internet and got {amount} from ad revenue.",
     "You found a lost cat and were given {amount} as a thanks.",
-    "You decided to become a web developer (why). Anyway you earned {amount}."
+    "You decided to become a web developer (why). Anyway you earned {amount}.",
+    "You teached some people that Africa isn't a country and they decided to reward you with {amount}."
   ],
   "crimeSuccess": [
     "You work for the Juarez cartel as a brick-presser and earn {amount}! They'll probably kill you and your family tomorrow. Just saying.",
